@@ -17,6 +17,7 @@
     <element value="Review Journal"/>
     <element value="Review Monograph"/>
     <element value="File"/>
+    <element value="Document"/>
   </property>
   <property name="allow_discussion">True</property>
   <property name="default_view">redirect-to-publication</property>
