@@ -5,6 +5,10 @@ Tests for the Publication content type and items it can contain
 import unittest2 as unittest
 from contextlib import contextmanager
 from plone import api
+from plone.app.testing.helpers import login
+from plone.app.testing.helpers import logout
+from plone.app.testing.interfaces import SITE_OWNER_NAME
+from plone.app.testing.interfaces import TEST_USER_NAME
 from recensio.contenttypes.interfaces.review import IParentGetter
 from recensio.policy.tests.layer import RECENSIO_INTEGRATION_TESTING
 
@@ -12,10 +16,12 @@ from recensio.policy.tests.layer import RECENSIO_INTEGRATION_TESTING
 @contextmanager
 def change_language(request, language):
     language_tool = api.portal.get_tool('portal_languages')
-    request.form['set_language'] = language
+    language_tool.use_request_negotiation = True
+    language_tool.use_cookie_negotiation = True
+    request.other['set_language'] = language
     language_tool.setLanguageBindings()
     yield request
-    del request.form['set_language']
+    del request.other['set_language']
     language_tool.setLanguageBindings()
 
 
@@ -35,6 +41,30 @@ class TestPublication(unittest.TestCase):
                     }
              }
             )[0].getObject()
+        login(self.layer['app'], SITE_OWNER_NAME)
+        self.custom_licence_doc_de = api.content.create(
+            container=self.publication,
+            id='fake_license_de',
+            title='Fake Lizenz',
+            type='Document',
+        )
+        self.custom_licence_doc_de.setLanguage('de')
+        self.custom_licence_doc_de.setText(
+            u"Dies ist eine übersetzte Lizenz"
+        )
+        self.custom_licence_doc_en = api.content.create(
+            container=self.publication,
+            id='fake_license_en',
+            title='Fake License',
+            type='Document',
+        )
+        self.custom_licence_doc_en.setLanguage('en')
+        self.custom_licence_doc_en.setText(
+            u"This is a translated license"
+        )
+        self.custom_licence_doc_de.addTranslationReference(
+            self.custom_licence_doc_en)
+        logout()
 
     def test_publication_schema_extension(self):
         """ Ensure the Publication schema has been successfully
@@ -58,15 +88,24 @@ class TestPublication(unittest.TestCase):
                              self.review.getLicense())
 
         custom_licence = u"Custom Licence"
-        custom_licence_en = u"Custom Licence English"
         self.publication.licence = custom_licence
-        self.publication.licence_en = custom_licence_en
         with change_language(self.request, 'de'):
             self.assertEqual(custom_licence,
                              self.review.getLicense())
         with change_language(self.request, 'en'):
-            self.assertEqual(custom_licence_en,
+            self.assertEqual(custom_licence,
                              self.review.getLicense())
+
+        self.publication.setLicence_ref(
+            api.content.get_uuid(self.custom_licence_doc_de))
+        with change_language(self.request, 'de'):
+            self.assertEqual(
+                u"<p>Dies ist eine übersetzte Lizenz</p>".encode('utf-8'),
+                self.review.getLicense())
+        with change_language(self.request, 'en'):
+            self.assertEqual(
+                u"<p>This is a translated license</p>".encode('utf-8'),
+                self.review.getLicense())
 
         issue = self.review.aq_parent
         volume = issue.aq_parent
@@ -76,10 +115,32 @@ class TestPublication(unittest.TestCase):
         self.assertEqual(volume_licence,
                          self.review.getLicense())
 
+        volume.setLicence_ref(
+            api.content.get_uuid(self.custom_licence_doc_de))
+        with change_language(self.request, 'de'):
+            self.assertEqual(
+                u"<p>Dies ist eine übersetzte Lizenz</p>".encode('utf-8'),
+                self.review.getLicense())
+        with change_language(self.request, 'en'):
+            self.assertEqual(
+                u"<p>This is a translated license</p>".encode('utf-8'),
+                self.review.getLicense())
+
         issue_licence = u"Custom Issue Licence"
         issue.licence = issue_licence
         self.assertEqual(issue_licence,
                          self.review.getLicense())
+
+        issue.setLicence_ref(
+            api.content.get_uuid(self.custom_licence_doc_de))
+        with change_language(self.request, 'de'):
+            self.assertEqual(
+                u"<p>Dies ist eine übersetzte Lizenz</p>".encode('utf-8'),
+                self.review.getLicense())
+        with change_language(self.request, 'en'):
+            self.assertEqual(
+                u"<p>This is a translated license</p>".encode('utf-8'),
+                self.review.getLicense())
 
         review_licence = u"Custom Review Licence"
         self.review.licence = review_licence
