@@ -8,6 +8,7 @@ Changelog
 - Multipart Titles: Removed field from rj type. #FLOW-559
 - Zotero Export: Include works author in title field and use review author for
   author field. #FLOW-651
+- New license field that supports translation (via referencing a Page). #FLOW-443
 
 
 4.5.0 (2019-06-05)
